--- a/author.html
+++ b/author.html
@@ -370,7 +370,7 @@ $(document).ready(function() {
                  <div class="home"><a href="http://jriddell.org/"><img src="images/home.png" height="25" width="25"></a></div></div>
                  </div>
                   <div class="entry2" id="Thom">
-                 <div class="entimg"> <img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"> <img src="images/photos/Thom.jpg" height="200" width="200"></div>
                  <div class="entdet">Thom May is a Debian Developer, an emeritus Member of the Apache Software Foundation and was one of the first hires for Canonical, Ubuntu's parent company. He currently lives in London and is Head of DevOps for Macmillan Digital Science.
                  </div>
                      <div class="lin2">
