add photo for Thiago

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ $(document).ready(function() {
       <div class="pic"><a href="author.html#Shane"><img src = "images/photos/Shane.jpg "  height="87" width="87" title="Shane"></a></div>
       <div class="pic"><a href="author.html#Shaun"><img src = "images/photos/Shaun.jpg "  height="87" width="87" title="Shaun"></a></div> 
       <div class="pic"><a href="author.html#Stuart"><img src = "images/photos/Stuart.jpg "  height="87" width="87" title="Stuart"></a></div> 
-      <div class="pic"><a href="author.html#Thiago"><img src = "images/photos/dummy.png "  height="87" width="87" title="Thiago"></a></div> 
+      <div class="pic"><a href="author.html#Thiago"><img src = "images/photos/Thiago.jpg "  height="87" width="87" title="Thiago"></a></div> 
       <div class="pic"><a href="author.html#Thom"><img src = "images/photos/Thom.jpg "  height="87" width="87" title="Thom"></a></div> 
       <div id="piccontainer1">
       <div class="pic"><a href="author.html#TillA"><img src = "images/photos/TillA.jpg "  height="87" width="87" title="Till"></a></div>
