--- a/author.html
+++ b/author.html
@@ -302,7 +302,7 @@ $(document).ready(function() {
                   <div class="blog"><a href=" http://jefferai.org/"><img src="images/blog.gif" height="25" width="25"></a></div></div>
                  </div>
                   <div class="entry2" id="Thiago">
-                 <div class="entimg"> <img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"> <img src="images/photos/Thiago.jpg" height="200" width="200"></div>
                  <div class="entdet">Thiago Macieira holds a double degree in Engineering and an MBA, but his involvement in Open Source predates those, getting close to 15 years now. An active participant in the KDE, Qt and MeeGo communities, he's been a software engineer and product manager for Qt, giving presentations and listening to people. These days, Thiago lives in Oslo, Norway and when he's not working on Qt, he tries (with limited success) to improve his skills at StarCraft 2.
                  </div>
                      <div class="lin2">
