add picture for Armijn

--- a/author.html
+++ b/author.html
@@ -271,7 +271,7 @@ $(document).ready(function() {
                  <div class="home"><a href="http://hubbahubba.de/"><img src="images/home.png" height="25" width="25"></a></div></div>
                  </div>
                   <div class="entry2" id="Armijn">
-                 <div class="entimg"> <img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"> <img src="images/photos/Armijn.jpg" height="200" width="200"></div>
                  <div class="entdet">Armijn Hemel has been using free software since 1994, when his brother came home with a stack of floppies with an early version of FreeBSD. A year later the switch to Linux was made and he has been using Unix(-like) systems ever since then, both at home, during his studies at Utrecht University and at work. Since 2005, Armijn has been part of the core team of gpl-violations.org and has his own consultancy (Tjaldur Software Governance Solutions) specialized in detection and resolution of GPL license violations.</div>
                      <div class="lin2">
                          <div class = "fb1"><a href="   " ><img src="images/twitter.png" height="25" width="25"></a></div>
