add picture for Austin

--- a/author.html
+++ b/author.html
@@ -427,7 +427,7 @@ $(document).ready(function() {
                          </div>
                  </div>
                  <div class="entry1" id="Austin">
-                 <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"><img src="images/photos/Austin.jpg" height="200" width="200"></div>
                  <div class="entdet">Austin "scorche" Appel is an information security professional who spends his time breaking into things previously thought secure (with permission, of course). He is often seen around security/hacker conferences teaching people how to pick locks. In the open source world, he does a host of things for the Rockbox project and previously volunteered for the One Laptop Per Child project.
                  </div>
                  </div>
