--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ $(document).ready(function() {
       <div class="pic"><a href="author.html#Ara"><img src = "images/photos/Ara.jpg "  height="87" width="87" title="Ara"></a></div> 
       <div class="pic"><a href="author.html#Armijin"><img src = "images/photos/Armijn.jpg "  height="87" width="87" title="Armijn"></a></div> 
       <div class="pic"><a href="author.html#Atul"><img src = "images/photos/Atul.jpg "  height="87" width="87" title="Atul"></a></div>
-      <div class="pic"><a href="author.html#Austin"><img src = "images/photos/dummy.png "  height="87" width="87" title="Austin"></a></div> 
+      <div class="pic"><a href="author.html#Austin"><img src = "images/photos/Austin.jpg "  height="87" width="87" title="Austin"></a></div> 
       <div class="pic"><a href="author.html#Carlo"><img src = "images/photos/dummy.png "  height="87" width="87" title="Carlo"></a></div> 
       <div class="pic"><a href="author.html#Dave"><img src = "images/photos/Dave.jpg "  height="87" width="87" title="Dave"></a></div> 
       <div class="pic"><a href="author.html#Duke"><img src = "images/photos/Duke.jpg "  height="87" width="87" title="Duke"></a></div> 
