add image for Andre

--- a/author.html
+++ b/author.html
@@ -325,7 +325,7 @@ $(document).ready(function() {
                          <div class="blog1"><a href="http://arapulido.com/"><img src="images/blog.gif" height="25" width="25"></a></div></div>
                  </div>
                  <div class="entry1" id="Andre">
-                 <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
+                 <div class="entimg"><img src="images/photos/Andre.jpg" height="200" width="200"></div>
                  <div class="entdet">In real life, Andre Klapper is a bugmaster. During lunch break or while sleeping he works on random things in GNOME (bugsquad, release team, translation, documentation, etc) or Maemo, or studies, or eats ice cream.
                  </div>
                      <div class="lin1">
