--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $(document).ready(function() {
     <h1>Authors</h1>
     <div id="piccontainer">
     <div class="pic"><a href="author.html#Alexandra"><img src="images/photos/Alexandra.jpg" height="87" width="87" title="Alexandra"></a></div>
-    <div class="pic"><a href="author.html#Andre"><img src = "images/photos/dummy.png "  height="87" width="87" title="Andre"></a></div> 
+    <div class="pic"><a href="author.html#Andre"><img src = "images/photos/Andre.jpg "  height="87" width="87" title="Andre"></a></div> 
       <div class="pic"><a href="author.html#Anne"><img src = "images/photos/Anne.jpg "  height="87" width="87" title="Anne"></a></div> 
       <div class="pic"><a href="author.html#Ara"><img src = "images/photos/Ara.jpg "  height="87" width="87" title="Ara"></a></div> 
       <div class="pic"><a href="author.html#Armijin"><img src = "images/photos/Armijn.jpg "  height="87" width="87" title="Armijn"></a></div> 
