--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ This book is the answer to "What would you have liked to know when you started c
         <img src="images/amazon.png" title="Amazon.com" id="amazon">
         <a href="http://www.lulu.com/product/paperback/open-advice/18865584"><img src="images/lulu.png" title="Lulu.com" id="lulu"></a><br>
         <p>Buy from Amazon</p>
-        <p id="p2"><a href="http://www.lulu.com/product/paperback/open-advice/18865584">Buy from Lulu</a></p>
+        <p id="p2"><a href="http://www.lulu.com/shop/lydia-pintscher/open-advice/paperback/product-18889265.html">Buy from Lulu</a></p>
         <p id="p3">(coming soon)</p>
     </div>
     <div id="conbox">
