also change second link to lulu.com page

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ This book is the answer to "What would you have liked to know when you started c
     	<h1>Buy</h1>
         <h2>You can buy a printed edition of Open Advice.</h2>
         <img src="images/amazon.png" title="Amazon.com" id="amazon">
-        <a href="http://www.lulu.com/product/paperback/open-advice/18865584"><img src="images/lulu.png" title="Lulu.com" id="lulu"></a><br>
+        <a href="http://www.lulu.com/shop/lydia-pintscher/open-advice/paperback/product-18889265.html"><img src="images/lulu.png" title="Lulu.com" id="lulu"></a><br>
         <p>Buy from Amazon</p>
         <p id="p2"><a href="http://www.lulu.com/shop/lydia-pintscher/open-advice/paperback/product-18889265.html">Buy from Lulu</a></p>
         <p id="p3">(coming soon)</p>
