link to amazon now that it is finally in their catalog

--- a/index.html
+++ b/index.html
@@ -149,11 +149,10 @@ This book is the answer to "What would you have liked to know when you started c
     <div id="buybox">
     	<h1>Buy</h1>
         <h2>You can buy a printed edition of Open Advice.</h2>
-        <img src="images/amazon.png" title="Amazon.com" id="amazon">
+        <a href="http://amzn.com/1105514935"><img src="images/amazon.png" title="Amazon.com" id="amazon"></a>
         <a href="http://www.lulu.com/shop/lydia-pintscher/open-advice/paperback/product-18889265.html"><img src="images/lulu.png" title="Lulu.com" id="lulu"></a><br>
-        <p>Buy from Amazon</p>
+        <p><a href="http://amzn.com/1105514935">Buy from Amazon</a></p>
         <p id="p2"><a href="http://www.lulu.com/shop/lydia-pintscher/open-advice/paperback/product-18889265.html">Buy from Lulu</a></p>
-        <p id="p3">(coming soon)</p>
     </div>
     <div id="conbox">
     <h1 style="color:white;">Stay Connected</h1>
