--- a/author.html
+++ b/author.html
@@ -151,7 +151,7 @@ $(document).ready(function() {
                  </div>
                   <div class="entry2" id="Guillaume">
                  <div class="entimg"> <img src="images/photos/Guillaume.jpg" height="200" width="200"></div>
-                 <div class="entdet">Guillaume Paumier is a photographer and physicist living in Toulouse, France. A long-time Wikipedian, he currently works for the Wikimedia Foundation, the non-proft that runs Wikipedia. As a product manager for Multimedia Usability, he notably conducted user research to design a new media upload system for Wikimedia Commons, the free media library associated with Wikipedia.</div>
+                 <div class="entdet">Guillaume Paumier is a photographer and physicist living in Toulouse, France. A long-time Wikipedian, he currently works for the Wikimedia Foundation, the non-profit that runs Wikipedia. As a product manager for Multimedia Usability, he notably conducted user research to design a new media upload system for Wikimedia Commons, the free media library associated with Wikipedia.</div>
                      <div class="lin2">
                          <div class = "fb1"><a href="https://twitter.com/#!/gpaumier"><img src="images/twitter.png" height="25" width="25"></a></div>
                  <div class="in1"><a href="http://identi.ca/gpaumier"><img src="images/identica.png" height="25" width="25"></a></div>
@@ -168,7 +168,7 @@ $(document).ready(function() {
                  </div>
                   <div class="entry2" id="Jos">
                  <div class="entimg"> <img src="images/photos/Jos.jpg" height="200" width="200"></div>
-                 <div class="entdet">Jos Poortvliet works as openSUSE community manager for SUSE Linux. Before that he was active in the international KDE community as team lead for the marketing team. In his "offine life" he has had jobs at a variety of companies as Business Consultant. His favorite pastime is experimenting in the kitchen, trying to come up with something edible.</div>
+                 <div class="entdet">Jos Poortvliet works as openSUSE community manager for SUSE Linux. Before that he was active in the international KDE community as team lead for the marketing team. In his "offline life" he has had jobs at a variety of companies as Business Consultant. His favorite pastime is experimenting in the kitchen, trying to come up with something edible.</div>
                      <div class="lin2">
                          <div class = "fb1"><a href="https://twitter.com/#!/jospoortvliet"><img src="images/twitter.png" height="25" width="25"></a></div>
                  <div class="in1"><a href="http://identi.ca/jospoortvliet"><img src="images/identica.png" height="25" width="25"></a></div>
@@ -344,7 +344,7 @@ $(document).ready(function() {
                  </div>
                  <div class="entry1" id="Robert">
                  <div class="entimg"><img src="images/photos/Robert.jpg" height="200" width="200"></div>
-                 <div class="entdet">Robert Kaye combines his love for music and open source into the open music encyclopedia MusicBrainz. Robert founded and leads the Californiabased non-profit MetaBrainz Foundation in a long term effort to improve the digital music experience. Beyond hacking on MusicBrainz, Robert seeks out interesting festivals like Burning Man and interesting side projects like hacking on drink-mixing robots. Topped with a colorful hair style at all times, you will never have a hard time picking him out of a crowd.
+                 <div class="entdet">Robert Kaye combines his love for music and open source into the open music encyclopedia MusicBrainz. Robert founded and leads the California-based non-profit MetaBrainz Foundation in a long term effort to improve the digital music experience. Beyond hacking on MusicBrainz, Robert seeks out interesting festivals like Burning Man and interesting side projects like hacking on drink-mixing robots. Topped with a colorful hair style at all times, you will never have a hard time picking him out of a crowd.
                  </div>
                      <div class="lin1">
                  <div class="home"><a href="http://mayhem-chaos.net/"><img src="images/home.png" height="25" width="25"></a></div></div>
