Replace & with &amp; in HTML markup.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ This book is the answer to "What would you have liked to know when you started c
         </div>
     </div>
     <div id="foobox"><p>
-    This site was created by Debajyoti Datta, Saransh Sinha & Supreet Pal Singh</p>
+    This site was created by Debajyoti Datta, Saransh Sinha &amp; Supreet Pal Singh</p>
     </div>
     <a href="#main">
     <div id="back">
