--- a/author.html
+++ b/author.html
@@ -393,7 +393,7 @@ $(document).ready(function() {
                  </div>
                  <div class="entry1" id="Gareth">
                  <div class="entimg"><img src="images/photos/Gareth.png" height="200" width="200"></div>
-                 <div class="entdet">Gareth J. Greenaway has been actively involved in the Free & Open Source community since 1997 after discovering Linux. A majority of this involvement has been gathering like-minded people to learn and experience new elements of Free & Open Source software. This involvement began with a small Linux Users Group and has expanded into organizing the Southern California Linux Expo, also known as SCALE. As one of the founding members of the event, Gareth current holds two key positions with the organization. The first role is Conference Operations and the second is Community Relations.
+                 <div class="entdet">Gareth J. Greenaway has been actively involved in the Free &amp; Open Source community since 1997 after discovering Linux. A majority of this involvement has been gathering like-minded people to learn and experience new elements of Free &amp; Open Source software. This involvement began with a small Linux Users Group and has expanded into organizing the Southern California Linux Expo, also known as SCALE. As one of the founding members of the event, Gareth current holds two key positions with the organization. The first role is Conference Operations and the second is Community Relations.
                  </div>
                      <div class="lin1">
                      <div class = "fb1"><a href="https://twitter.com/#!/garethgreenaway" ><img src="images/twitter.png" height="25" width="25"></a></div>
@@ -402,7 +402,7 @@ $(document).ready(function() {
                  </div>
                   <div class="entry2" id="Carlo">
                  <div class="entimg"> <img src="images/photos/dummy.png" height="200" width="200"></div>
-                 <div class="entdet">Carlo Daffara is a researcher in the field of Open Source-based business models, collaborative development of digital artifacts, and Open Source software employment in companies. He is part of the editorial review board of the International Journal of Open Source Software & Processes (IJOSSP) and member of the technical board of two regional Open Source competence centers, as well as member of the FSFE European Legal Network. He has been part of SC34 and JTC1 committees in the Italian branch of ISO, UNINFO.Previous to that, Carlo Daffara was the Italian representative at the European Working Group on Libre Software.He chaired the SME working group of the EU Task Force on Competitiveness, and the IEEE open source middleware working group of the Technical Committee on Scalable Computing.
+                 <div class="entdet">Carlo Daffara is a researcher in the field of Open Source-based business models, collaborative development of digital artifacts, and Open Source software employment in companies. He is part of the editorial review board of the International Journal of Open Source Software &amp; Processes (IJOSSP) and member of the technical board of two regional Open Source competence centers, as well as member of the FSFE European Legal Network. He has been part of SC34 and JTC1 committees in the Italian branch of ISO, UNINFO.Previous to that, Carlo Daffara was the Italian representative at the European Working Group on Libre Software.He chaired the SME working group of the EU Task Force on Competitiveness, and the IEEE open source middleware working group of the Technical Committee on Scalable Computing.
                  </div>
                      <div class="lin2">
                          <div class = "fb1"><a href="https://twitter.com/#!/cdaffara" ><img src="images/twitter.png" height="25" width="25"></a></div>
@@ -412,7 +412,7 @@ $(document).ready(function() {
                  </div>
                  <div class="entry1" id="TillJ">
                  <div class="entimg"><img src="images/photos/dummy.png" height="200" width="200"></div>
-                 <div class="entdet">Dr. Till Jaeger has been a partner at JBB Rechtsanwaelte since 2001. He is a Certified Copyright and Media Law Attorney and advises large and medium-sized IT businesses as well as government authorities and software developers on matters involving contracts, licensing and online use. One particular focus of his work is on the legal issues created by Free and Open Source Software. He is co-founder of the Institute for Legal Aspects of Free & Open Source Software (ifrOSS). He provides advice on compliance with open source licenses and on compatibility issues, and helps developers and software companies to enforce licenses. Till represented the gpl-violations.org project in several lawsuits to enforce the GPL and has published several articles and books related to legal questions of Free and Open Source Software. He was a member of the Committee C in the GPLv3 drafting process.
+                 <div class="entdet">Dr. Till Jaeger has been a partner at JBB Rechtsanwaelte since 2001. He is a Certified Copyright and Media Law Attorney and advises large and medium-sized IT businesses as well as government authorities and software developers on matters involving contracts, licensing and online use. One particular focus of his work is on the legal issues created by Free and Open Source Software. He is co-founder of the Institute for Legal Aspects of Free &amp; Open Source Software (ifrOSS). He provides advice on compliance with open source licenses and on compatibility issues, and helps developers and software companies to enforce licenses. Till represented the gpl-violations.org project in several lawsuits to enforce the GPL and has published several articles and books related to legal questions of Free and Open Source Software. He was a member of the Committee C in the GPLv3 drafting process.
                  </div>
                      <div class="lin1">
                      <div class="home"><a href="http://www.jbb.de/en/attorneys/till-jaeger/"><img src="images/home.png" height="25" width="25"></a></div></div>
@@ -433,7 +433,7 @@ $(document).ready(function() {
                  </div>
            </div>
     <div id="foobox"><p>
-    This site was created by Debajyoti Datta, Saransh Sinha & Supreet Pal Singh</p>
+    This site was created by Debajyoti Datta, Saransh Sinha &amp; Supreet Pal Singh</p>
     </div>
 </div>
 </div>
