update Rob's homepage

--- a/author.html
+++ b/author.html
@@ -347,7 +347,7 @@ $(document).ready(function() {
                  <div class="entdet">Robert Kaye combines his love for music and open source into the open music encyclopedia MusicBrainz. Robert founded and leads the California-based non-profit MetaBrainz Foundation in a long term effort to improve the digital music experience. Beyond hacking on MusicBrainz, Robert seeks out interesting festivals like Burning Man and interesting side projects like hacking on drink-mixing robots. Topped with a colorful hair style at all times, you will never have a hard time picking him out of a crowd.
                  </div>
                      <div class="lin1">
-                 <div class="home"><a href="http://mayhem-chaos.net/"><img src="images/home.png" height="25" width="25"></a></div></div>
+                 <div class="home"><a href="http://mayhem.cat"><img src="images/home.png" height="25" width="25"></a></div></div>
                  </div>
                   <div class="entry2" id="Jono">
                  <div class="entimg"> <img src="images/photos/dummy.png" height="200" width="200"></div>
