fix link to French translation

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ This book is the answer to "What would you have liked to know when you started c
     </div>
     <div id="dwnbox">
     	<h1>Download</h1>
-        <h2>Open Advice is available as a free download under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a> license. You are encouraged to share it with anyone. (<a href="Open-Advice.pdf">pdf</a>, <a href="http://github.com/Open-Advice/Open-Advice">source</a>, <a href="Open-Advice.epub">epub</a>, <a href="Open-Advice.mobi">mobi</a>, <a href="http://github.com/Open-Advice/Open-Advice/issues">bug reports</a>, <a href="http://framabook.org/15-libres-conseils/">French translation</a>)</h2>
+        <h2>Open Advice is available as a free download under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a> license. You are encouraged to share it with anyone. (<a href="Open-Advice.pdf">pdf</a>, <a href="http://github.com/Open-Advice/Open-Advice">source</a>, <a href="Open-Advice.epub">epub</a>, <a href="Open-Advice.mobi">mobi</a>, <a href="http://github.com/Open-Advice/Open-Advice/issues">bug reports</a>, <a href="http://framabook.org/libres-conseils">French translation</a>)</h2>
         <a href="Open-Advice.pdf"><img src="images/pdf.png" title="Download" id="download"></a>
     </div>
     <div id="buybox">
