--- a/author.html
+++ b/author.html
@@ -153,9 +153,8 @@ $(document).ready(function() {
                  <div class="entimg"> <img src="images/photos/Guillaume.jpg" height="200" width="200"></div>
                  <div class="entdet">Guillaume Paumier is a photographer and physicist living in Toulouse, France. A long-time Wikipedian, he currently works for the Wikimedia Foundation, the non-profit that runs Wikipedia. As a product manager for Multimedia Usability, he notably conducted user research to design a new media upload system for Wikimedia Commons, the free media library associated with Wikipedia.</div>
                      <div class="lin2">
-                         <div class = "fb1"><a href="https://twitter.com/#!/gpaumier"><img src="images/twitter.png" height="25" width="25"></a></div>
-                 <div class="in1"><a href="http://identi.ca/gpaumier"><img src="images/identica.png" height="25" width="25"></a></div>
-                 <div class="home1"><a href="http://www.gpaumier.org/"><img src="images/home.png" height="25" width="25"></a></div></div>
+                         <div class = "fb1"><a href="https://twitter.com/gpaumier"><img src="images/twitter.png" height="25" width="25"></a></div>
+                 <div class="home1"><a href="https://guillaumepaumier.com/"><img src="images/home.png" height="25" width="25"></a></div></div>
                  </div>
                  <div class="entry1" id="Henri">
                  <div class="entimg"><img src="images/photos/Henri.jpg" height="200" width="200"></div>
